load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "constants.go",
        "logger.go",
        "secrets.go",
        "status_string.go",
        "utils.go",
    ],
    importpath = "beckendrof/gaia/src/utils",
    visibility = ["//visibility:public"],
    deps = ["//src/services/mjolnir"],
)
